--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,17 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node dist/index.js",
-		"dev": "nodemon --exec ts-node src/index.ts",
+		"dev": "tsx watch --clear-screen=false src/index.ts",
 		"build": "tsc"
 	},
 	"dependencies": {
 		"express": "^5.2.1",
+		"mongodb": "^7.0.0",
 		"nodemon": "^3.1.11"
 	},
 	"devDependencies": {
 		"@types/express": "^5.0.6",
+		"@types/mongodb": "^4.0.6",
 		"@types/node": "^25.0.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.9.3"
