--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,23 @@
 	"type": "commonjs",
 	"main": "index.js",
 	"scripts": {
-		"start": "node dist/index.js",
-		"dev": "tsx watch --clear-screen=false src/index.ts",
+		"start": "node dist/index.ts",
+		"dev": "nodemon --watch src --exec tsx src/index.ts",
 		"build": "tsc"
 	},
 	"dependencies": {
+		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
 		"mongodb": "^7.0.0",
-		"nodemon": "^3.1.11"
+		"mongoose": "^9.1.1"
 	},
 	"devDependencies": {
 		"@types/express": "^5.0.6",
 		"@types/mongodb": "^4.0.6",
+		"@types/mongoose": "^5.11.96",
 		"@types/node": "^25.0.2",
-		"ts-node": "^10.9.2",
+		"nodemon": "^3.1.11",
+		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
 	}
 }
