--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
 		"build": "tsc"
 	},
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
+		"jsonwebtoken": "^9.0.3",
 		"mongodb": "^7.0.0",
 		"reflect-metadata": "^0.2.2",
 		"typedi": "^0.10.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^6.0.0",
 		"@types/express": "^5.0.6",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/mongodb": "^4.0.6",
 		"@types/node": "^25.0.2",
 		"nodemon": "^3.1.11",
