--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,11 +4,36 @@ services:
     restart: always
 
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
 
-    container_name: flashcards-mongo
-    ports:
-      - "27017:27017"
+    container_name: leer-mongo
+    expose:
+      - "27017"
     volumes:
       - ./data:/data/db
+
+  app:
+    build: .
+    expose:
+      - "3000"
+    restart: always
+    container_name: leer-node
+    depends_on:
+      - mongodb
+    environment:
+      JWT_SECRET: ${JWT_SECRET}
+      PORT: ${PORT}
+      DB_NAME: ${DB_NAME}
+      SALT_ROUNDS: ${SALT_ROUNDS}
+
+  nginx:
+    image: nginx:1.29.4-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - app
+    restart: always
+    container_name: leer-nginx
