fix: jenkins via ssh

--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -45,13 +45,15 @@ pipeline {
 
         stage('Deploy') {
             steps {
-                echo 'deploying to local server...'
-                script {
+                echo 'deploying via ssh...'
+                sshagent(['ssh_key_credentials']) {
                     sh '''
-                        cd /home/masotto/leer
-                        docker pull ${DOCKER_REGISTRY}/leer:latest
-                        docker-compose down
-                        docker-compose up -d
+                        ssh -o StrictHostKeyChecking=no masotto@172.26.253.138 "
+                            cd /home/masotto/leer && \
+                            docker pull ${DOCKER_REGISTRY}/leer:latest && \
+                            docker-compose down && \
+                            docker-compose up -d
+                        "
                     '''
                 }
             }
