--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       PORT: ${PORT}
       DB_NAME: ${DB_NAME}
       SALT_ROUNDS: ${SALT_ROUNDS}
+      MONGO_USER: ${MONGO_USER}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
 
   nginx:
     image: nginx:1.29.4-alpine
